# iatevale-agent

./: .bazelignore  .bazelrc  .bazelrc_disabled  .gitignore  MODULE.bazel  README.md  WORKSPACE
deploy/: BUILD.bazel  deploy.sh
deploy/cloudrun/iatevaleagent/: BUILD.bazel
java/: BUILD.bazel
java/app/helloworld/: BUILD.bazel
java/example/adk/agent/custom/: BUILD.bazel
java/example/adk/agent/llm/mcpclient/forecasting/: BUILD.bazel  LEEME.txt
java/example/adk/agent/llm/mcpclient/software-bug-assistant/: LEEME.txt
java/example/adk/agent/llm/simple/multitool/: BUILD.bazel
java/example/adk/agent/loop/: BUILD.bazel
java/example/adk/agent/parallel/: BUILD.bazel
java/example/adk/agent/sequential/: BUILD.bazel
java/example/adk/common/: BUILD.bazel
java/example/adk/forecasting/: BUILD.bazel  LEEME.txt
java/example/adk/helloweatheragent/: BUILD.bazel
java/example/adk/loop/: BUILD.bazel
java/example/adk/mcpclient/forecasting/: BUILD.bazel
java/example/adk/mcpclient/software-bug-assistant/: BUILD.bazel  LEEME.txt
java/example/adk/multitool/: BUILD.bazel
java/example/adk/parallel/: BUILD.bazel
java/example/adk/sequential/: BUILD.bazel
java/example/adk/simple/hello-weather-agent/: BUILD.bazel
java/example/adk/standalone/hello-weather-agent/: BUILD.bazel
java/example/adk/standalone/multitool/: BUILD.bazel
java/example/adk/tool/builtin/codeexecution/: BUILD.bazel
java/example/adk/tool/builtin/googlesearch/: BUILD.bazel
java/example/adk/tool/function/: BUILD.bazel
java/example/aiplatform/: BUILD.bazel
java/example/aiplatform/src/main/java/org/iatevale/example/aiplatform/: AiplaformExample.java  PrediccionTiempoMorella.java
java/example/datastore/: BUILD.bazel
java/example/datastore/src/main/java/org/iatevale/example/datastore/: DatastoreExample.java
java/example/gcloud/datastore/: BUILD.bazel
java/example/gcloud/discoveryengine/common/: BUILD.bazel
java/example/gcloud/discoveryengine/createdatastore/: BUILD.bazel
java/example/gcloud/discoveryengine/ingestcontent/: BUILD.bazel
java/example/gcloud/storage/: BUILD.bazel
java/example/general/apifuture/: BUILD.bazel
java/example/storage/: BUILD.bazel
java/example/storage/src/main/java/org/iatevale/example/datastore/: StorageExample.java
java/example/storage/src/main/java/org/iatevale/example/storage/: StorageExample.java
java/example/telegram/: BUILD.bazel
java/example/telegram/src/main/java/org/iatevale/example/telegram/simplebot/: TelegrambotsExample.java
java/example/telegrambots/: BUILD.bazel
java/example/telegrambots/src/main/java/org/iatevale/example/telegrambots/: TelegrambotsExample.java
java/example/telegrambots/src/main/java/org/iatevale/example/telegrambots/impl/: BotImpl.java  MyAmazingBot.java
java/example/vertexai/common/: BUILD.bazel
java/example/vertexai/discoveryengine/common/: BUILD.bazel
java/example/vertexai/discoveryengine/createdatastore/: BUILD.bazel
java/example/vertexai/discoveryengine/example01/: BUILD.bazel
java/example/vertexai/discoveryengine/ingestcontent/: BUILD.bazel
java/example/vertexai/discoveryengine/ingestcontext/: BUILD.bazel
java/example/vertexai/example01/: BUILD.bazel
java/example/vertexai/example02/: BUILD.bazel
java/example/vertexai/example03/: BUILD.bazel
java/example/vertexai/example04/: BUILD.bazel
java/example/vertexai/example05/: BUILD.bazel
java/example/vertexai/example06/: BUILD.bazel
java/example/vertexai/example07/: BUILD.bazel
java/example/vertexai/example08/: BUILD.bazel
java/example/vertexai/example09/: BUILD.bazel
java/example/vertexai/example10/: BUILD.bazel
java/example/vertexai/example11/: BUILD.bazel
java/example/vertexai/example12/: BUILD.bazel
java/example/vertexai/example13/: BUILD.bazel
java/example/vertexai/function/example01/: BUILD.bazel
java/example/vertexai/function/example01/src/main/java/com/example/: FunctionDefinitions.java  Main.java
java/example/vertexai/function/example01/src/main/java/com/example/model/: Address.java  ContactInfo.java  Customer.java  Order.java
java/example/vertexai/generativeai/example01/: BUILD.bazel
java/example/vertexai/generativeai/example02/: BUILD.bazel
java/example/vertexai/generativeai/example03/: BUILD.bazel
java/example/vertexai/generativeai/example04/: BUILD.bazel
java/example/vertexai/generativeai/example05/: BUILD.bazel
java/example/vertexai/generativeai/example06/: BUILD.bazel
java/example/vertexai/generativeai/example07/: BUILD.bazel
java/example/vertexai/generativeai/example08/: BUILD.bazel
java/example/vertexai/generativeai/example09/: BUILD.bazel
java/example/vertexai/generativeai/example10/: BUILD.bazel
java/example/vertexai/generativeai/example11/: BUILD.bazel
java/platform/config/: BUILD.bazel
java/platform/config/src/main/java/org/iatevale/config/: AdkParameters.java  GCloudAuthParameters.java  IATevaleConfig.java
java/platform/config/src/main/resources/: config.properties
java/platform/server/agent/: BUILD.bazel
java/platform/server/helloword/: BUILD.bazel
java/platform/server/helloword/src/main/java/org/iatevale/server/agentserver/: AgentServer.java
java/platform/server/helloword/src/main/java/org/iatevale/server/helloworldserver/: HelloWorldServer.java
java/platform/util/auth/: BUILD.bazel
java/platform/util/auth/src/main/java/org/iatevale/util/auth/: GCloudAuthData.java  GCloudAuthFactory.java  GCloudAuthParameters.java
java/platform/util/closeable/: BUILD.bazel
java/platform/util/conversion/: BUILD.bazel
java/platform/util/timer/: BUILD
java/product/helloworld/: BUILD.bazel
java/product/helloworld/src/main/java/org/iatevale/app/helloworld/: HelloWorld.java  HelloWorldLauncher.java  HelloWorldModule.java
java/product/iatevaleagent/: BUILD.bazel  deploy.sh
java/product/iatevaleagent/src/main/java/org/iatevale/app/iatevaleagent/: IAtevaleAgent.java  IAtevaleAgentModule.java  IatevaleAgent.java  IatevaleAgentModule.java
proto/example/vertexai/discoveryengine/: BUILD.bazel  domain.proto
(+268 files in other folders)
