
module(
    name = "iatevale-agent",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

maven = use_extension("@rules_jvm_external//:workspace.bzl", "maven")
maven.install(artifacts = [
            "io.grpc:grpc-netty-shaded:1.69.0",
            "com.google.guava:guava:33.0.0-jre",
            "org.json:json:20210307",
            "org.assertj:assertj-core:3.4.1",
            "org.hamcrest:hamcrest:2.2",
            "com.google.cloud:google-cloud-datastore:2.14.1",
            "com.google.cloud:google-cloud-storaje:2.45.0",
            "com.google.cloud:google-cloud-aiplatform:3.56.0",
            "com.google.inject:guice:6.0.0",
            "com.moandjiezana.toml:toml4j:0.7.2",
            "com.google.code.gson:gson:2.10.1",
            "org.slf4j:slf4j-api:2.0.7",
            "org.slf4j:slf4j-jdk14:2.0.7",
    ]
)

use_repo(maven, "maven")

# Usa un registro local si no quieres depender de Bzlmod Central Registry (BCR)
# local_path_override(
#     module_name = "rules_jvm_external",
#     path = "/path/to/rules_jvm_external", # Reemplaza con la ruta real
# )