
module(
    name = "iatevale-agent",
    version = "0.1.0",
    compatibility_level = 1,
)

# Dependencias BAZEL
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Dependencias MAVEL
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(artifacts = [
            "com.google.guava:guava:33.4.0-jre",
            "com.google.cloud:google-cloud-core:2.26.0",
            "com.google.api:api-common:2.42.0",
            "com.google.code.gson:gson:2.10.1",
            "com.google.auth:google-auth-library-credentials:1.30.1",
            "com.google.auth:google-auth-library-oauth2-http:1.30.1",
            "com.google.cloud:google-cloud-datastore:2.25.1",
            "com.google.cloud:google-cloud-storage:2.46.0",
            "com.google.cloud:google-cloud-vertexai:1.15.0",
            "com.google.cloud:google-cloud-aiplatform:3.55.0",
            "com.google.cloud:google-cloud-discoveryengine:0.51.0",
            "org.reactivestreams:reactive-streams:1.0.4",
            "com.google.inject:guice:6.0.0",
            "com.moandjiezana.toml:toml4j:0.7.2",
            "org.json:json:20210307",
            "org.assertj:assertj-core:3.4.1",
            "org.hamcrest:hamcrest:2.2",
            "org.slf4j:slf4j-api:2.0.7",
            "org.slf4j:slf4j-jdk14:2.0.7",
            "com.fasterxml.jackson.core:jackson-databind:2.16.0",
    ]
)
use_repo(maven, "maven")

# Carga de la imagen con Java 21
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_21_base",
    image = "index.docker.io/library/eclipse-temurin",
    tag = "21-jdk",
    platforms = ["linux/amd64"],
)
use_repo(oci, "java_21_base")