load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "deploy_tar",
    srcs = ["//java/example/datastore:datastore-example_deploy.jar"],
)

oci_image(
    name = "datastore_example_gcloud_image",
    base = "@java_21_base",
    entrypoint = [
        "java",
        "-jar",
        "datastore-example_deploy.jar",
    ],
    tars = [":deploy_tar"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "datastore_example_gcloud_push",
    image = ":datastore_example_gcloud_image",
    repository = "europe-west3-docker.pkg.dev/project-id/repo-name/datastore-example",
)
