load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "datastore-example",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    main_class = "DatastoreExample",
    deps = [
        "@maven//:com_google_cloud_google_cloud_datastore",
    ],
)
