load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "deploy_tar",
    srcs = [
        "//java/product/iatevaleagent_deploy.jar"
    ],
)

oci_image(
    name = "iatevaleagent_image",
    base = "@java_21_base",
    entrypoint = [
        "java",
        "-jar",
        "iatevaleagent_deploy.jar",
    ],
    tars = [":deploy_tar"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "iatevale_push",
    image = ":iatevale_image",
    repository = "europe-west3-docker.pkg.dev/project-id/repo-name/iatevale-agent",
)


genrule(
    name = "iatevaleagent_deploy",
    srcs = [":iatevaleagent_image"],  # Ahora la imagen se publica directamente
    outs = ["iatevale_result.txt"],
    cmd = """
        gcloud run deploy mi-servicio \
          --image gcr.io/mi-proyecto/iatevaleagent_image \  # Usamos la imagen publicada
          --platform managed \
          --region us-central1 \
          --allow-unauthenticated > $@
    """,
)

