load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_oci//oci:defs.bzl", "oci_push")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

java_binary(
    name = "datastore-example",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.datastore.DatastoreExample",
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/util/auth",
        "@maven//:com_google_cloud_google_cloud_datastore",
    ],
)
