load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "storage-example",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.storage.StorageExample",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_cloud_google_cloud_storage",
    ],
)
