load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "telegrambots",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.telegram.simplebot.TelegrambotsExample",
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/config",
        "@maven//:org_telegram_telegrambots_client",
        "@maven//:org_telegram_telegrambots_longpolling",
        "@maven//:org_telegram_telegrambots_meta",
    ],
)
