load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "helloworld",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.app.helloworld.HelloWorld",
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/server/helloword:helloworld",
        "//java/platform/util/closeable",
        "@maven//:com_google_inject_guice",
    ],
)
