load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "iatevaleagent",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.app.iatevaleagent.IAtevaleAgent",
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/server/agent",
        "//java/platform/util/closeable",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
    ],
)
