load("@rules_java//java:defs.bzl", "java_binary")

java_library(
    name = "common",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/config",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_adk_google_adk",
    ],
)
