load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "apifuture",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.general.apifuture.ApiFutureExample",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_api_api_common",
        "@maven//:com_google_cloud_google_cloud_core",
        "@maven//:com_google_guava_guava",
    ],
)
