load("@rules_java//java:defs.bzl", "java_binary")

java_library(
    name = "common",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/util/auth",
        "@maven//:com_google_api_grpc_proto_google_cloud_vertexai_v1",
        "@maven//:com_google_cloud_google_cloud_vertexai",
    ],
)
