load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "text-generation-with-async",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "vertextai",
    visibility = ["//visibility:public"],
    deps = [
        "//java/platform/util/auth",
        "@maven//:com_google_api_api_common",
        "@maven//:com_google_api_grpc_proto_google_cloud_vertexai_v1",
        "@maven//:com_google_cloud_google_cloud_vertexai",
        "@maven//:org_json_json",
    ],
)
