package(default_visibility = ["//visibility:public"])

java_library(
    name = "auth",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:com_google_auth_google_auth_library_credentials",
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_cloud_google_cloud_vertexai",
    ],
)
