package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "domain_proto",
    srcs = ["domain.proto"],
    deps = [
    ],
)

java_proto_library(
    name = "domain_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":domain_proto",
    ],
)
