load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

java_binary(
    name = "custom",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.adk.simple.custom.StoryFlowAgentExample",
    visibility = ["//visibility:public"],
    deps = [
        "//java/example/adk/common",
        "//java/platform/config",
        "@maven//:com_google_adk_google_adk",
        "@maven//:com_google_genai_google_genai",
        "@maven//:io_reactivex_rxjava3_rxjava",
    ],
)
