load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

java_binary(
    name = "helloweatheragent",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.google.adk.samples.agents.helloweather.HelloWeatherAgent",
    visibility = ["//visibility:public"],
    deps = [
        "//java/example/adk/common",
        "@maven//:com_google_adk_google_adk",
        "@maven//:com_google_adk_google_adk_dev",
        "@maven//:com_google_genai_google_genai",
        "@maven//:io_reactivex_rxjava3_rxjava",
    ],
)
