load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "createsatastore",
    srcs = glob(["src/main/java/org/iatevale/example/gcloud/discoveryengine/createdatastore/CreateDatastore.java"]),
    main_class = "org.iatevale.example.gcloud.discoveryengine.createdatastore.CreateDatastore",
    visibility = ["//visibility:public"],
    deps = [
        "//java/example/gcloud/discoveryengine/common",
        "//java/platform/config",
        "//proto/example/vertexai/discoveryengine:domain_java_proto",
        "@maven//:com_google_api_gax",
        "@maven//:com_google_api_grpc_proto_google_cloud_discoveryengine_v1",
        "@maven//:com_google_cloud_google_cloud_discoveryengine",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@protobuf//java/core",
    ],
)
