load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "example01",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.vertextai.generativeai.example01.BasedTextGeneration",
    visibility = ["//visibility:public"],
    deps = [
        "//java/example/vertexai/generativeai/common",
        "//java/platform/util/conversion",
        "@maven//:com_google_cloud_google_cloud_discoveryengine",
    ],
)
