load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "function",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "org.iatevale.example.adk.tool.function.googlesearch.GoogleSearchAgentApp",
    visibility = ["//visibility:public"],
    deps = [
        "//java/example/adk/common",
        "@maven//:com_google_adk_google_adk",
        "@maven//:com_google_genai_google_genai",
        "@maven//:com_google_guava_guava",
        "@maven//:io_reactivex_rxjava3_rxjava",
    ],
)
